--- a/doob-login.html
+++ b/doob-login.html
@@ -39,7 +39,7 @@
         </div>
         <div class="section mb-5 p-2">
 
-            <form action="doob-membership.php">
+            <form action="doob-membership.html">
                 <div class="card">
                     <div class="card-body pb-1">
                         <div class="form-group basic">
