update doob design

--- a/doob-membership.html
+++ b/doob-membership.html
@@ -29,7 +29,7 @@
             Title
         </div>
         <div class="right">
-            <a href="app-settings.html" class="headerButton">
+            <a href="doob-settings.html" class="headerButton">
                 <img src="assets/img/logo-tr.png" alt="image" class="imaged w32">
             </a>
         </div>
