--- a/doob-profile.html
+++ b/doob-profile.html
@@ -29,7 +29,7 @@
             Title
         </div>
         <div class="right">
-            <a href="app-settings.html" class="headerButton">
+            <a href="doob-settings.html" class="headerButton">
                 <img src="assets/img/logo-tr.png" alt="image" class="imaged w32">
             </a>
         </div>
@@ -48,13 +48,13 @@
 
     <!-- App Bottom Menu -->
     <div class="appBottomMenu">
-        <a href="doob-membership.html" class="item active">
+        <a href="doob-membership.html" class="item">
             <div class="col">
                 <ion-icon name="card-outline"></ion-icon>
                 <strong>Memberships</strong>
             </div>
         </a>
-        <a href="doob-profile.html" class="item">
+        <a href="doob-profile.html" class="item active">
             <div class="col">
                 <ion-icon name="person-circle-outline"></ion-icon>
                 <strong>Profile</strong>
