--- a/doob-settings.html
+++ b/doob-settings.html
@@ -15,7 +15,7 @@
 
     <!-- loader -->
     <div id="loader">
-        <img src="assets/img/loading-icon.png" alt="icon" class="loading-icon">
+        <img src="assets/img/logo-tr.png" alt="icon" class="loading-icon">
     </div>
     <!-- * loader -->
 
@@ -30,7 +30,7 @@
             Title
         </div>
         <div class="right">
-            <a href="app-settings.html" class="headerButton">
+            <a href="doob-settings.html" class="headerButton">
                 <img src="assets/img/logo-tr.png" alt="image" class="imaged w32">
             </a>
         </div>
@@ -161,7 +161,7 @@
 
     <!-- App Bottom Menu -->
     <div class="appBottomMenu">
-        <a href="doob-membership.html" class="item active">
+        <a href="doob-membership.html" class="item">
             <div class="col">
                 <ion-icon name="card-outline"></ion-icon>
                 <strong>Memberships</strong>
@@ -185,7 +185,7 @@
                 <strong>Friends</strong>
             </div>
         </a>
-        <a href="doob-settings.html" class="item">
+        <a href="doob-settings.html" class="item active">
             <div class="col">
                 <ion-icon name="settings-outline"></ion-icon>
                 <strong>Settings</strong>
