update doob design

--- a/doob-login.html
+++ b/doob-login.html
@@ -8,9 +8,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/logo.svg.svg">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-
 <body>
-
     <!-- loader -->
     <div id="loader">
         <img src="assets/img/logo-tr.png" alt="icon" class="loading-icon">
@@ -27,18 +25,14 @@
         <div class="pageTitle"></div>
         <div class="right">
         </div> -->
-
     </div>
     <!-- * App Header -->
-
     <!-- App Capsule -->
     <div id="appCapsule">
-
         <div class="section mt-2 text-center">
-            <img src="assets/img/doob-tr.png" alt="icon" class="img-fluid">
+            <img src="assets/img/logo-tr.png" alt="icon" class="img-fluid">
         </div>
         <div class="section mb-5 p-2">
-
             <form action="doob-membership.html">
                 <div class="card">
                     <div class="card-body pb-1">
@@ -51,7 +45,6 @@
                                 </i>
                             </div>
                         </div>
-
                         <div class="form-group basic">
                             <div class="input-wrapper">
                                 <!-- <label class="label" for="password1">Password</label> -->
@@ -64,27 +57,19 @@
                         </div>
                     </div>
                 </div>
-
-
                 <div class="form-links mt-2">
                     <div>
                         <a href="app-register.html">Register Now</a>
                     </div>
                     <div><a href="app-forgot-password.html" class="text-muted">Forgot Password?</a></div>
                 </div>
-
                 <div class="form-button-group  transparent">
                     <button type="submit" class="btn btn-primary btn-block btn-lg">Log in</button>
                 </div>
-
             </form>
         </div>
-
     </div>
     <!-- * App Capsule -->
-
-
-
     <!-- ========= JS Files =========  -->
     <!-- Bootstrap -->
     <script src="assets/js/lib/bootstrap.bundle.min.js"></script>
@@ -94,8 +79,5 @@
     <script src="assets/js/plugins/splide/splide.min.js"></script>
     <!-- Base Js File -->
     <script src="assets/js/base.js"></script>
-
-
 </body>
-
 </html>
