--- a/doob-friends.html
+++ b/doob-friends.html
@@ -2,31 +2,30 @@
 <html lang="en">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover" />
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover" />
     <meta name="theme-color" content="#000000">
-    <title>Doob</title>
+    <title>Doob :: Friends</title>
     <link rel="icon" type="image/png" href="assets/img/logo.svg.svg" sizes="32x32">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/logo.svg.svg">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-
     <!-- loader -->
     <div id="loader">
         <img src="assets/img/logo-tr.png" alt="icon" class="loading-icon">
     </div>
     <!-- * loader -->
-
     <!-- App Header -->
-    <div class="appHeader bg-primary text-light">
+    <div class="appHeader bg-white text-dark">
         <div class="left">
-            <a href="#" class="headerButton" data-bs-toggle="modal" data-bs-target="#sidebarPanel">
-                <ion-icon name="menu-outline"></ion-icon>
+            <a href="#" class="headerButton text-dark" data-bs-toggle="modal" data-bs-target="#sidebarPanel">
+                <ion-icon name="reorder-two-outline"></ion-icon>
             </a>
         </div>
         <div class="pageTitle">
-            Title
+            Friends
         </div>
         <div class="right">
             <a href="doob-settings.html" class="headerButton">
@@ -35,17 +34,41 @@
         </div>
     </div>
     <!-- * App Header -->
-
-
     <!-- App Capsule -->
     <div id="appCapsule">
-
-
-
+        <div class="section mt-2">
+            <div class="row">
+                <div class="col-6">
+                    <div class="card">
+                        <div class="card-body d-flex justify-content-around">
+                            <ion-icon name="qr-code-outline" style="font-size:50px;"></ion-icon>
+                            <h3 style="margin:5px 0px 0px 5px;">Scan QR Code</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-6">
+                    <div class="card">
+                        <div class="card-body d-flex justify-content-around" style="padding:20px;">
+                            <span class="badge badge-light" style="font-size: 50px;margin-top: 10px;">0</span>
+                            <h3 style="margin:0px 0px 0px 8px;">Friend Request</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 mt-2">
+                    <form class="search-form">
+                        <div class="form-group searchbox">
+                            <input type="text" class="form-control" placeholder="Search friend">
+                            <i class="input-icon icon ion-ios-search"></i>
+                            <!-- <a href="#" class="ms-1 close toggle-searchbox"><i class="icon ion-ios-close-circle"></i></a> -->
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- * App Capsule -->
-
-
     <!-- App Bottom Menu -->
     <div class="appBottomMenu">
         <a href="doob-membership.html" class="item">
@@ -80,7 +103,6 @@
         </a>
     </div>
     <!-- * App Bottom Menu -->
-
     <!-- App Sidebar -->
     <div class="modal fade panelbox panelbox-left" id="sidebarPanel" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
@@ -108,7 +130,6 @@
                         </div>
                     </div>
                     <!-- * balance -->
-
                     <!-- action group -->
                     <div class="action-group">
                         <a href="index.html" class="action-button">
@@ -145,7 +166,6 @@
                         </a>
                     </div>
                     <!-- * action group -->
-
                     <!-- menu -->
                     <div class="listview-title mt-1">Menu</div>
                     <ul class="listview flush transparent no-line image-listview">
@@ -192,7 +212,6 @@
                         </li>
                     </ul>
                     <!-- * menu -->
-
                     <!-- others -->
                     <div class="listview-title mt-1">Others</div>
                     <ul class="listview flush transparent no-line image-listview">
@@ -226,11 +245,8 @@
                                 </div>
                             </a>
                         </li>
-
-
                     </ul>
                     <!-- * others -->
-
                     <!-- send money -->
                     <div class="listview-title mt-1">Send Money</div>
                     <ul class="listview image-listview flush transparent no-line">
@@ -260,15 +276,11 @@
                         </li>
                     </ul>
                     <!-- * send money -->
-
                 </div>
             </div>
         </div>
     </div>
     <!-- * App Sidebar -->
-
-
-
     <!-- ========= JS Files =========  -->
     <!-- Bootstrap -->
     <script src="assets/js/lib/bootstrap.bundle.min.js"></script>
@@ -278,7 +290,6 @@
     <script src="assets/js/plugins/splide/splide.min.js"></script>
     <!-- Base Js File -->
     <script src="assets/js/base.js"></script>
-
 </body>
 
 </html>
