--- a/doob-message.html
+++ b/doob-message.html
@@ -2,16 +2,16 @@
 <html lang="en">
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover" />
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover" />
     <meta name="theme-color" content="#000000">
-    <title>Doob</title>
+    <title>Doob :: Inbox</title>
     <link rel="icon" type="image/png" href="assets/img/logo.svg.svg" sizes="32x32">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/logo.svg.svg">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-
     <!-- loader -->
     <div id="loader">
         <img src="assets/img/logo-tr.png" alt="icon" class="loading-icon">
@@ -19,14 +19,14 @@
     <!-- * loader -->
 
     <!-- App Header -->
-    <div class="appHeader bg-primary text-light">
+    <div class="appHeader bg-white text-dark">
         <div class="left">
-            <a href="#" class="headerButton" data-bs-toggle="modal" data-bs-target="#sidebarPanel">
-                <ion-icon name="menu-outline"></ion-icon>
+            <a href="#" class="headerButton text-dark" data-bs-toggle="modal" data-bs-target="#sidebarPanel">
+                <ion-icon name="reorder-two-outline"></ion-icon>
             </a>
         </div>
         <div class="pageTitle">
-            Title
+            Inbox
         </div>
         <div class="right">
             <a href="doob-settings.html" class="headerButton">
@@ -36,15 +36,84 @@
     </div>
     <!-- * App Header -->
 
-
     <!-- App Capsule -->
     <div id="appCapsule">
+        <ul class="listview image-listview inset mt-2">
 
+            <li>
+                <a href="doob-conversation.html" class="item">
+                    <img src="assets/img/sample/avatar/avatar1.jpg" alt="image" class="image">
+                    <div class="in">
+                        <div>John Fonseca</div>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="doob-conversation.html" class="item">
+                    <img src="assets/img/sample/avatar/avatar4.jpg" alt="image" class="image">
+                    <div class="in">
+                        <div>Sophie Silverton</div>
+                    </div>
+                </a>
+            </li>
 
+            <li>
+                <a href="doob-conversation.html" class="item">
+                    <img src="assets/img/sample/avatar/avatar3.jpg" alt="image" class="image">
+                    <div class="in">
+                        <div>Frank Sjogren</div>
+                        <span class="badge badge-primary">3</span>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="doob-conversation.html" class="item">
+                    <img src="assets/img/sample/avatar/avatar4.jpg" alt="image" class="image">
+                    <div class="in">
+                        <div>Sophie Silverton</div>
+                    </div>
+                </a>
+            </li>
 
+            <li>
+                <a href="doob-conversation.html" class="item">
+                    <img src="assets/img/sample/avatar/avatar3.jpg" alt="image" class="image">
+                    <div class="in">
+                        <div>Frank Sjogren</div>
+                        <span class="badge badge-primary">1</span>
+                    </div>
+                </a>
+            </li>
+
+            <li>
+                <a href="doob-conversation.html" class="item">
+                    <img src="assets/img/sample/avatar/avatar4.jpg" alt="image" class="image">
+                    <div class="in">
+                        <div>Sophie Silverton</div>
+                    </div>
+                </a>
+            </li>
+
+            <li>
+                <a href="doob-conversation.html" class="item">
+                    <img src="assets/img/sample/avatar/avatar3.jpg" alt="image" class="image">
+                    <div class="in">
+                        <div>Frank Sjogren</div>
+                        <span class="badge badge-primary">3</span>
+                    </div>
+                </a>
+            </li>
+            <li>
+                <a href="doob-conversation.html" class="item">
+                    <img src="assets/img/sample/avatar/avatar4.jpg" alt="image" class="image">
+                    <div class="in">
+                        <div>Sophie Silverton</div>
+                    </div>
+                </a>
+            </li>
+        </ul>
     </div>
     <!-- * App Capsule -->
-
 
     <!-- App Bottom Menu -->
     <div class="appBottomMenu">
@@ -108,7 +177,6 @@
                         </div>
                     </div>
                     <!-- * balance -->
-
                     <!-- action group -->
                     <div class="action-group">
                         <a href="index.html" class="action-button">
@@ -145,7 +213,6 @@
                         </a>
                     </div>
                     <!-- * action group -->
-
                     <!-- menu -->
                     <div class="listview-title mt-1">Menu</div>
                     <ul class="listview flush transparent no-line image-listview">
@@ -192,7 +259,6 @@
                         </li>
                     </ul>
                     <!-- * menu -->
-
                     <!-- others -->
                     <div class="listview-title mt-1">Others</div>
                     <ul class="listview flush transparent no-line image-listview">
@@ -226,11 +292,8 @@
                                 </div>
                             </a>
                         </li>
-
-
                     </ul>
                     <!-- * others -->
-
                     <!-- send money -->
                     <div class="listview-title mt-1">Send Money</div>
                     <ul class="listview image-listview flush transparent no-line">
@@ -260,14 +323,11 @@
                         </li>
                     </ul>
                     <!-- * send money -->
-
                 </div>
             </div>
         </div>
     </div>
     <!-- * App Sidebar -->
-
-
 
     <!-- ========= JS Files =========  -->
     <!-- Bootstrap -->
@@ -278,7 +338,6 @@
     <script src="assets/js/plugins/splide/splide.min.js"></script>
     <!-- Base Js File -->
     <script src="assets/js/base.js"></script>
-
 </body>
 
 </html>
