--- a/doob-message.html
+++ b/doob-message.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport"
         content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover" />
-    <meta name="theme-color" content="#000000">
+    <meta name="theme-color" content="#33db59">
     <title>Doob :: Inbox</title>
     <link rel="icon" type="image/png" href="assets/img/logo.svg.svg" sizes="32x32">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/logo.svg.svg">
