update doob design

--- a/doob-membership.html
+++ b/doob-membership.html
@@ -15,7 +15,7 @@
     </div>
     <!-- * loader -->
     <!-- App Header -->
-    <div class="appHeader bg-white text-dark">
+    <div class="appHeader">
         <div class="left">
             <a href="#" class="headerButton text-dark" data-bs-toggle="modal" data-bs-target="#sidebarPanel">
                 <ion-icon name="reorder-two-outline"></ion-icon>
