--- a/doob-login.html
+++ b/doob-login.html
@@ -1,20 +1,23 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover" />
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover" />
     <meta name="theme-color" content="#33db59">
     <title>Doob</title>
     <link rel="icon" type="image/png" href="assets/img/logo.svg.svg" sizes="32x32">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/logo.svg.svg">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
+
+<body class="bg-white">
     <!-- loader -->
     <div id="loader">
         <img src="assets/img/logo-tr.png" alt="icon" class="loading-icon">
     </div>
     <!-- * loader -->
-    
+
     <!-- App Header -->
     <div class="appHeader no-border transparent position-absolute">
         <!-- <div class="left">
@@ -30,11 +33,11 @@
     <!-- App Capsule -->
     <div id="appCapsule">
         <div class="section mt-2 text-center">
-            <img src="assets/img/logo-tr.png" alt="icon" class="img-fluid">
+            <img src="assets/img/logo-tr.png" alt="icon" class="imaged w120">
         </div>
         <div class="section mb-5 p-2">
             <form action="doob-membership.html">
-                <div class="card">
+                <div class="card shadow-none">
                     <div class="card-body pb-1">
                         <div class="form-group basic">
                             <div class="input-wrapper">
@@ -57,19 +60,99 @@
                         </div>
                     </div>
                 </div>
-                <div class="form-links mt-2">
-                    <div>
-                        <a href="app-register.html">Register Now</a>
+                <div class="mt-5 text-center">
+                    <button type="submit" class="btn btn-primary col-8 btn-lg">Log in</button>
+                </div>
+                <div class="form-group text-center mt-2">
+                    <div class="mt-4"><a href="app-forgot-password.html">
+                            <h5>Forgot Password?</h5>
+                        </a></div>
+                    <div class="mt-4">
+                        <a href="app-register.html" class="font-weight-bold h4">Sign Up</a>
                     </div>
-                    <div><a href="app-forgot-password.html" class="text-muted">Forgot Password?</a></div>
                 </div>
-                <div class="form-button-group  transparent">
-                    <button type="submit" class="btn btn-primary btn-block btn-lg">Log in</button>
-                </div>
+                <!-- <div class="form-button-group  transparent">
+                    <button type="button" class="btn btn-light btn-block btn-lg">
+                        <img class="imaged w24" src="assets/img/lang/united-kingdom.png" alt="">&nbsp; Language</button>
+
+                </div> -->
             </form>
         </div>
     </div>
     <!-- * App Capsule -->
+
+    <!-- Dialog Basic -->
+    <div class="modal fade dialogbox" id="DialogBasic" data-bs-backdrop="static" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-body text-center" style="height: 250px;">
+                    <ul class="listview simple-listview">
+                        <li>
+                            <img class="imaged w48" src="assets/img/lang/united-kingdom.png" alt="">
+                            <label class="form-check-label" for="English">
+                                English
+                            </label>
+                            <input class="form-check-input" type="radio" name="language" id="flexRadioDefault2">
+                        </li>
+                        <li><img class="imaged w48" src="assets/img/lang/spain.png" alt="">
+                            <label class="form-check-label" for="Spain">
+                                Spain
+                            </label>
+                            <input class="form-check-input" type="radio" name="language" id="Spain">
+                        </li>
+                        <li><img class="imaged w48" src="assets/img/lang/russia.png" alt="">
+                            <label class="form-check-label" for="Russia">
+                                Russia
+                            </label>
+                            <input class="form-check-input" type="radio" name="language" id="Russia">
+                        </li>
+                        <li><img class="imaged w48" src="assets/img/lang/portugal.png" alt="">
+                            <label class="form-check-label" for="Portugal">
+                                Portugal
+                            </label>
+                            <input class="form-check-input" type="radio" name="language" id="Portugal">
+                        </li>
+                        <li><img class="imaged w48" src="assets/img/lang/poland.png" alt="">
+                            <label class="form-check-label" for="Poland">
+                                Poland
+                            </label>
+                            <input class="form-check-input" type="radio" name="language" id="Poland">
+                        </li>
+                        <li><img class="imaged w48" src="assets/img/lang/italy.png" alt="">    
+                            <label class="form-check-label" for="Italy">
+                                Italy
+                            </label>
+                            <input class="form-check-input" type="radio" name="language" id="Italy">
+                        </li>
+
+                        <li><img class="imaged w48" src="assets/img/lang/germany.png" alt="">
+                            <label class="form-check-label" for="Germany">
+                                Germany
+                            </label>
+                            <input class="form-check-input" type="radio" name="language" id="Germany">
+                        </li>
+                        <li><img class="imaged w48" src="assets/img/lang/france.png" alt="">
+                            <label class="form-check-label" for="France">
+                                France
+                            </label>
+                            <input class="form-check-input" type="radio" name="language" id="France">
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- * Dialog Basic -->
+    <!-- App Bottom Menu -->
+    <div class="appBottomMenu">
+        <a href="doob-membership.html" class="item" data-bs-toggle="modal" data-bs-target="#DialogBasic">
+            <div class="col d-flex justify-content-center">
+                <img class="imaged w24" style="height:100%" src="assets/img/lang/united-kingdom.png" alt="">
+                <strong class="h6">&nbsp; Language</strong>
+            </div>
+        </a>
+    </div>
+    <!-- * App Bottom Menu -->
     <!-- ========= JS Files =========  -->
     <!-- Bootstrap -->
     <script src="assets/js/lib/bootstrap.bundle.min.js"></script>
@@ -80,4 +163,5 @@
     <!-- Base Js File -->
     <script src="assets/js/base.js"></script>
 </body>
+
 </html>
