--- a/doob-qr-register.html
+++ b/doob-qr-register.html
@@ -1,13 +1,16 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover" />
+    <meta name="viewport"
+        content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, viewport-fit=cover" />
     <meta name="theme-color" content="#33db59">
     <title>Doob :: Memberships</title>
     <link rel="icon" type="image/png" href="assets/img/logo.svg.svg" sizes="32x32">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/img/logo.svg.svg">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <!-- loader -->
     <div id="loader">
@@ -36,16 +39,20 @@
         <div class="section mt-2">
             <div class="row">
                 <div class="col-12 mt-2 text-center">
-                    <img src="assets/img/id-card.png" alt="" class="imaged w160">
-                    <h2>No Memberships...</h2>  
+                    <h4 class="text-center">To add a new membership to your doob account, please scan the following QR code at a doob terminal when instructed by a member of staff</h4>
+
+                    <img src="assets/img/qr-code.png" class="mt-3 imaged w200">
+                </div>
+                <div class="col-12 mt-3 text-center">
+                    <a href="#" class="headerButton goBack">
+                        <button class="btn btn-white">
+                            <ion-icon name="arrow-back-outline"></ion-icon>
+                            <h2 class="pt-1">Return</h2>
+                        </button>
+                    </a>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-12 mt-5 text-center">
-                    <a href="doob-membership-confirm.html" class="btn btn-lg btn-primary">Add Memberships <ion-icon name="add-outline"></ion-icon></a>  
-                </div>
-            </div>
-        </div>  
+        </div>
     </div>
     <!-- * App Capsule -->
     <!-- App Bottom Menu -->
@@ -270,4 +277,5 @@
     <!-- Base Js File -->
     <script src="assets/js/base.js"></script>
 </body>
+
 </html>
