--- a/doob-login.html
+++ b/doob-login.html
@@ -31,7 +31,7 @@
     </div>
     <!-- * App Header -->
     <!-- App Capsule -->
-    <div id="appCapsule">
+    <div id="appCapsule" class="appBody" draggable="true">
         <div class="section mt-2 text-center">
             <img src="assets/img/logo-tr.png" alt="icon" class="imaged w120">
         </div>
@@ -163,6 +163,31 @@
     <script src="assets/js/plugins/splide/splide.min.js"></script>
     <!-- Base Js File -->
     <script src="assets/js/base.js"></script>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            var container = document.querySelector('.appBody');
+            var initialY = 0;
+
+            container.addEventListener('dragstart', function (e) {
+                initialY = e.clientY;
+            });
+            container.addEventListener('drag', function (e) {
+                var deltaY = e.clientY - initialY;
+                if (deltaY > 110) {
+                    deltaY = 110; // Limit the drag to 110 pixels
+                }
+                container.style.transform = 'translateY(' + deltaY + 'px)';
+            });
+            container.addEventListener('dragend', function (e) {
+                container.style.transform = '';
+                var deltaY = e.clientY - initialY;
+                if (deltaY > 100) {
+                    location.reload();
+                }
+            });
+        });
+    </script>
 </body>
 
 </html>
