--- a/doob-login.html
+++ b/doob-login.html
@@ -31,7 +31,7 @@
     </div>
     <!-- * App Header -->
     <!-- App Capsule -->
-    <div id="appCapsule" class="appBody" draggable="true">
+    <div id="appCapsule" class="appBody" draggable="true" ontouchstart="handleTouchStart(event)" ontouchmove="handleTouchMove(event)" ontouchend="handleTouchEnd(event)">
         <div class="section mt-2 text-center">
             <img src="assets/img/logo-tr.png" alt="icon" class="imaged w120">
         </div>
@@ -165,28 +165,28 @@
     <script src="assets/js/base.js"></script>
 
     <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            var container = document.querySelector('.appBody');
-            var initialY = 0;
+        var container = document.querySelector('.appBody');
+        var initialY = 0;
 
-            container.addEventListener('dragstart', function (e) {
-                initialY = e.clientY;
-            });
-            container.addEventListener('drag', function (e) {
-                var deltaY = e.clientY - initialY;
-                if (deltaY > 110) {
-                    deltaY = 110; // Limit the drag to 110 pixels
-                }
-                container.style.transform = 'translateY(' + deltaY + 'px)';
-            });
-            container.addEventListener('dragend', function (e) {
-                container.style.transform = '';
-                var deltaY = e.clientY - initialY;
-                if (deltaY > 100) {
-                    location.reload();
-                }
-            });
-        });
+        function handleTouchStart(e) {
+            initialY = e.touches[0].clientY;
+        }
+
+        function handleTouchMove(e) {
+            var deltaY = e.touches[0].clientY - initialY;
+            if (deltaY > 110) {
+                deltaY = 110; // Limit the drag to 110 pixels
+            }
+            container.style.transform = 'translateY(' + deltaY + 'px)';
+        }
+
+        function handleTouchEnd(e) {
+            container.style.transform = '';
+            var deltaY = e.changedTouches[0].clientY - initialY;
+            if (deltaY > 100) {
+                location.reload();
+            }
+        }
     </script>
 </body>
 
