update doob design

--- a/doob-profile.html
+++ b/doob-profile.html
@@ -69,9 +69,10 @@
                     <a href="doob-coin.html">
                         <div class="card">
                             <div class="card-body pb-1 text-center">
-                                <h4>
+                                <h3>
+                                    <img src="assets/img/coins.png" alt="" class="imaged w24" >
                                     Coin Details
-                                </h4>
+                                </h3>
                             </div>
                         </div>
                     </a>
